Collapse theme files into theme.js and theme.css; Add version select to mobile nav; Fix some run script bugs

--- a/docs/custom/readthedocs_dt/css/theme_extra.css
+++ b/docs/custom/readthedocs_dt/css/theme_extra.css
@@ -37,11 +37,7 @@
     height: 45px;
 }
 
-@media screen and (max-width: 768px) {
-    .wy-nav-side {
-        height: 100%;
-    }
-}
+@media screen and (max-width: 768px) { }
 
 /*
  * readthedocs theme hides nav items when the window height is
@@ -192,3 +188,88 @@ td, th {
    border-collapse: collapse;
 }
 
+
+
+/*
+ * Version select CSS
+ */
+@media screen and (max-width: 768px) {
+  /* restores version-select in mobile sidenav */
+  .rst-versions.shift {
+      display: block;
+  }
+}
+
+.rst-versions {
+  height: unset;
+  cursor: default !important;
+}
+
+.rst-versions .rst-current-version {
+  display: none;
+  cursor: default;
+}
+
+.version-select {
+  background-color: #272525;
+}
+
+.version-select__bar {
+  padding: 14px;
+  text-align: right;
+  color: #27AE60;
+  user-select: none;
+  font-size: 14.4px;
+  cursor: pointer;
+}
+.version-select__bar > i {
+  margin-left: 2px;
+  color: #fff;
+}
+
+.version-select__menu {
+  background-color: #1f1d1d;
+  padding: 12px;
+  user-select: none;
+  display: none;
+}
+
+.version-select__menu-versions dt {
+  color: #999;
+  font-size: 90%;
+}
+.version-select__menu-versions dd {
+  display: inline-block;
+  padding: 8px;
+}
+.version-select__menu-versions dd .version {
+  color: #fff;
+  font-size: 85%;
+  cursor: pointer;
+}
+.version-select__menu-versions dd .version--active {
+  font-weight: bold;
+}
+
+
+/**
+* Menu indentation
+*/
+.wy-menu-vertical li ul.subnav ul.subnav {
+  padding-left: 0;
+}
+
+/* selected - all */
+.wy-menu-vertical li ul.subnav ul.subnav li a {
+  padding-left: 2.42em;
+}
+
+/* selected - second level */
+.wy-menu-vertical .subnav li.current > ul li.toctree-l4 a,
+.wy-menu-vertical .subnav li.current > ul li a.toctree-l5 {
+  padding-left: 3.42em !important;
+}
+
+.wy-menu-vertical .subnav li.current span.caption-text {
+  background-color: #eee;
+}
